--- a/HrSystem/HrSystem/Views/Feed/Index.cshtml
+++ b/HrSystem/HrSystem/Views/Feed/Index.cshtml
@@ -4,7 +4,8 @@
     ViewData["Title"] = "Index";
 }
 @{
-    var feedModel = ViewBag.Model as FeedModel; 
+    var feedModel = ViewBag.Model as FeedModel;
+    var pageModel = feedModel.PageModel; 
 }
 <div class="p-4">
     <form method="post" action="~/Feed/Index">
@@ -25,7 +26,7 @@
 
         <input type="hidden" name="OrderBy" id="orderBy" value="@feedModel.OrderBy" />
         <input type="hidden" name="ColumnName" id="columnName" value="@feedModel.ColumnName"/>
-
+        <input type="hidden" name="PageModel.currentPage" id="currentPage" value="@pageModel.CurrentPage" />
         <button type="submit" id="btnsub">Search</button>
 
 
@@ -95,12 +96,45 @@
                 }
             </tbody>
         </table>
+        <div class="row">
+        <div class="col-sm-12 col-md-5">
+            <div class="dataTables_info" id="example_info" role="status" aria-live="polite">
+                Showing <span>@(pageModel.StartIndex +1)</span> to <span>@(pageModel.EndIndex +1)</span> of <span>@pageModel.TotalRowCount</span> entries
+            </div>
+        </div><div class="col-sm-12 col-md-7">
+            <div class="dataTables_paginate paging_simple_numbers" id="example_paginate">
+                <ul class="pagination">
+                    <li class="paginate_button page-item previous" id="example_previous"><a href="#" aria-controls="example" data-dt-idx="0" tabindex="0" class="page-link">Previous</a></li>
 
+                        @for (int i = 1; i <= pageModel.PageCount; i = i + 1)
+                        {
+                            if (i == pageModel.CurrentPage)
+                            {
+                                    <li class="paginate_button page-item active"><a onclick="pageChange('@i')" href="/applications/index?currentPage=@i" aria-controls="example" data-dt-idx="1" tabindex="0" class="page-link">@i</a></li>
+
+                            }
+                            else
+                            {
+                                    <li class="paginate_button page-item"><a onclick="pageChange('@i')" href="/applications/index?currentPage=@i" aria-controls="example" data-dt-idx="1" tabindex="0" class="page-link">@i</a></li>
+
+                            }
+
+                        }
+                    <li class="paginate_button page-item next disabled" id="example_next"><a href="#" aria-controls="example" data-dt-idx="3" tabindex="0" class="page-link">Next</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
 
     </div>
 </div>
 
 <script>
+    function pageChange(num){
+        event.preventDefault();
+        document.querySelector("#currentPage").value = num;
+        document.querySelector("#btnsub").click();
+    }
     function sort(columnName, orderBy) {
         
         event.preventDefault();
