--- a/HrSystem/HrSystem/Views/Shared/_Layout.cshtml
+++ b/HrSystem/HrSystem/Views/Shared/_Layout.cshtml
@@ -80,6 +80,7 @@
             height: 100%;
             transition: 0.5s;
             transition-property: left;
+            overflow: scroll;
         }
 
             .sidebar .profile_image {
@@ -105,10 +106,12 @@
                 box-sizing: border-box;
                 transition: 0.5s;
                 transition-property: background;
+                
             }
 
                 .sidebar a:hover {
                     background: #19B3D3;
+                    
                 }
 
             .sidebar i {
@@ -125,6 +128,7 @@
             margin: -19px 0;
             transition: 0.5s;
             transiotion-property: color;
+            
         }
 
             label #sidebar_btn:hover {
