--- a/HrSystem/DummyMVC/Views/Shared/_Layout.cshtml
+++ b/HrSystem/DummyMVC/Views/Shared/_Layout.cshtml
@@ -2,9 +2,7 @@
 <html lang="en">
 <head>
 
-    @{
-        int i = 0;
-    }
+    
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - DummyMVC</title>
@@ -28,6 +26,10 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Login" asp-action="Logout">Logout</a>
                         </li>
                     </ul>
                 </div>
