--- a/HrSystem/DummyMVC/Views/Shared/_Layout_new.cshtml
+++ b/HrSystem/DummyMVC/Views/Shared/_Layout_new.cshtml
@@ -30,6 +30,9 @@
             <li><a href="/home/design">Design</a></li>
             <li><a href="/home/price">Pricing</a></li>
             <li><a href="/home/about">Contact Us</a></li>
+            <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Login" asp-action="Logout">Logout</a>
+                        </li>
         </ul>
     </div>
             @RenderBody()
