--- a/HrSystem/UIproject/Views/Home/Index.cshtml
+++ b/HrSystem/UIproject/Views/Home/Index.cshtml
@@ -8,19 +8,19 @@
         <div>
             <ul class="nav nav-tabs">
                 <li class="nav-item">
-                    <a class="nav-link" href="#section1">Home</a>
+                    <a class="nav-link" href="/Home/Index">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#section2">Features</a>
+                    <a class="nav-link" href="/Home/Features">Features</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#section3">Design</a>
+                    <a class="nav-link" href="/Home/Design">Design</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#section4">Price</a>
+                    <a class="nav-link" href="/Home/Price">Price</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#section5">Contact</a>
+                    <a class="nav-link" href="/Home/Contact">Contact</a>
                 </li>
             </ul>
         </div>
@@ -33,7 +33,7 @@
             <a href="dummy1.cshtml" class="simple-button"><b>Try It Now!</b></a>
             <br /><br /><br /><br /><br />
         </div>
-        <div class="Content-1" id="section2">
+        @*<div class="Content-1" id="section2">
             <div id="features">
                 <h2>Amazing Featurs</h2>
                 <ul>
@@ -87,6 +87,6 @@
                 </form>
             </div>
             </div>
-        </div>
+        </div>*@
     </body>
 </html>
