--- a/HrSystem/HrSystem/Views/Shared/_Layout.cshtml
+++ b/HrSystem/HrSystem/Views/Shared/_Layout.cshtml
@@ -274,7 +274,7 @@
         @*<script  scr="jquery-3.6.0.min"></script>*@
 
  
-        <script type="text/javascript" src="~/js/site.js"></script>
+        <script type="text/javascript" src="~/js/site.js?v2"></script>
 
  
 
